[metadata]
name = azlyrics_api
version = 1.1.0
author = Zack Didcott
summary = AZLyrics API - Get song information from AZLyrics.

[options]
packages =
  azlyrics_api
python_requires = >= 3.10
install_requires =
  bs4
  lxml
  requests

[options.extras_require]
dev =
  black
  build
  flake8
  isort
  mypy

[options.entry_points]
console_scripts =
  azlyrics-cli = azlyrics_api.__main__:main
